--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.3.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.6",
     "lucide-react": "^0.563.0",
